deploy/okd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ai-studio
  annotations:
    haproxy.router.openshift.io/timeout: 180s
spec:
  to:
    kind: Service
    name: ai-studio
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
